@@ -18,14 +18,15 @@
     "jquery": "^3",
     "bootstrap": "^3.3.7",
     "moment": "^2.10",
-    "eonasdan-bootstrap-datetimepicker": "^4.17",
     "gettext.js": "^0.7",
     "c3": "^0.7",
     "papaparse": "^5.0",
     "fullcalendar": "^3.10.2",
     "mousetrap": "^1.6",
     "bootstrap-rtl-ondemand": "^3.3.4-ondemand",
-    "Sortable": "sortablejs#^1.8.4"
+    "Sortable": "sortablejs#^1.8.4",
+    "tempusdominus-bootstrap-3": "bootstrap-datetimepicker-v5-alpha#^5.0.0-alpha8",
+    "popper.js": "https://unpkg.com/popper.js"
   },
   "devDependencies": {
     "qunit": "^1.18"
